# LearnOpenGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  untitled
.cache/clangd/index/: glad.c.CB04A2362ECCD78B.idx  glad.h.38A09EA02FF2B930.idx  glfw3.h.E04631CA0EE45E8E.idx  glfw3.h.EDB481C6B775D024.idx  khrplatform.h.DF67D5FA281DD662.idx  main.cpp.1154A5B5996F39AC.idx  main.cpp.7653427199882C27.idx
Build_files/: CMakeCache.txt  LearnOpenGL  Makefile  cmake_install.cmake  compile_commands.json
cmake-macos-build/: CMakeCache.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp  renderloop.cpp  shader_utils.cpp  shader_utils.h  vertex_shader.glsl
